@@ -1,13 +1,0 @@
-<component name="libraryTable">
-  <library name="Maven: org.jfree:jcommon:1.0.21">
-    <CLASSES>
-      <root url="jar://$MAVEN_REPOSITORY$/org/jfree/jcommon/1.0.21/jcommon-1.0.21.jar!/" />
-    </CLASSES>
-    <JAVADOC>
-      <root url="jar://$MAVEN_REPOSITORY$/org/jfree/jcommon/1.0.21/jcommon-1.0.21-javadoc.jar!/" />
-    </JAVADOC>
-    <SOURCES>
-      <root url="jar://$MAVEN_REPOSITORY$/org/jfree/jcommon/1.0.21/jcommon-1.0.21-sources.jar!/" />
-    </SOURCES>
-  </library>
-</component>
