@@ -1,13 +1,0 @@
-<component name="libraryTable">
-  <library name="Maven: org.jfree:jfreechart:1.0.17">
-    <CLASSES>
-      <root url="jar://$MAVEN_REPOSITORY$/org/jfree/jfreechart/1.0.17/jfreechart-1.0.17.jar!/" />
-    </CLASSES>
-    <JAVADOC>
-      <root url="jar://$MAVEN_REPOSITORY$/org/jfree/jfreechart/1.0.17/jfreechart-1.0.17-javadoc.jar!/" />
-    </JAVADOC>
-    <SOURCES>
-      <root url="jar://$MAVEN_REPOSITORY$/org/jfree/jfreechart/1.0.17/jfreechart-1.0.17-sources.jar!/" />
-    </SOURCES>
-  </library>
-</component>
