@@ -112,7 +112,7 @@
         <dependency>
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
-            <version>1.0.17</version>
+            <version>1.0.19</version>
             <exclusions>
                 <!-- Exclude all not needed dependecies -->
                 <exclusion>
